Update README with project structure and setup details
Added project structure, database setup, and running instructions.